# vyuha

./: .gitignore
vyuha/: .env.example  .railwayignore  Dockerfile  Dockerfile.whisper  alembic.ini  docker-compose.yml  local_ai_gateway.py  local_whisper_server.py  pyproject.toml  start.sh
vyuha/.github/workflows/: regression.yml
vyuha/docs/: vyuha-user-guide.docx
vyuha/migrations/: env.py
vyuha/migrations/versions/: 0001_initial_schema.py
vyuha/seeds/: p0_language_seeds.py  p1_language_seeds.py
vyuha/tests/: conftest.py  test_asr_intent_entity.py  test_asr_wer.py  test_ingestion.py  test_models.py  test_p1_seeds.py  test_runner_mocked.py  test_scoring_mocked.py  test_seeds.py
vyuha/vyuha/: __init__.py  config.py
vyuha/vyuha/asr/: __init__.py  intent_entity_scorer.py  llm_client.py  normalizer.py  wer_scorer.py
vyuha/vyuha/ci/: regression_runner.py
vyuha/vyuha/dashboard/: app.py
vyuha/vyuha/db/: __init__.py  engine.py  repositories.py  tables.py
vyuha/vyuha/evaluators/: __init__.py  agent.py  audio.py  base.py  classification.py  code.py  heuristic.py  llm_judge.py  registry.py  retrieval.py  safety.py  similarity.py
vyuha/vyuha/generator/: __init__.py  test_generator.py
vyuha/vyuha/ingestion/: __init__.py  failure_detector.py  models.py  persona_extractor.py  pipeline.py
vyuha/vyuha/models/: __init__.py  rca.py  scoring.py  test_case.py
vyuha/vyuha/noise/: __init__.py  profiles.py
vyuha/vyuha/orchestrator/: main.py  runner.py
vyuha/vyuha/scoring/: __init__.py  eva_a.py  eva_x.py  judges.py  rca_tagger.py
vyuha/vyuha/simulator/: __init__.py  user_simulator.py
vyuha/vyuha/stt/: ollama_stt.py
vyuha/vyuha/tts/: __init__.py  azure.py  base.py  (+3 more)
(+51 files in other folders)
