[project]
name = "vyuha"
version = "0.1.0"
description = "Voice AI Evaluation System — Bot-to-Bot Testing, Multilingual Simulation, Automated RCA"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # LLM Judges
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Audio processing
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    # WebSocket
    "websockets>=13.0",
    "httpx>=0.27.0",
    # File upload support
    "python-multipart>=0.0.9",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "ulid-py>=1.1.0",
    # Dashboard
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[project.scripts]
vyuha = "vyuha.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "jiwer>=4.0.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
